src/Components/Card/Card.css
.scene{
    height: 200px;
    width: 150px;
    perspective: 10000px;
    margin: 10px;
}

@media screen and (max-width: 710px) {
    .scene{
        height: 100px;
        width: 75px;
        perspective: 600px;
        margin: 10px;
    }
    
}

@media screen and (max-width: 330px) {
    .scene{
        height: 80px;
        width: 60px;
        perspective: 600px;
        margin: 10px;
    }
    
}

.card {
    position: relative;
    height: 100%;
    width: 100%;
    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
    border-radius: 0.5em;
    transition: transform 1s;
    transform-style: preserve-3d;
}
.card.flipped{
    transform: rotateY(180deg);
}
.cardFace {
    position: absolute;
    height: 100%;
    width: 100%;
    backface-visibility: hidden;
    -webkit-backface-visibility: hidden; /* Safari */
    border-style: solid;
    border-width: thin;
    border-color: rgb(184, 184, 184);
}

.front{
    background: rgb(240, 248, 250);
    /* linear-gradient(45deg,#80ffff, #00ffff, #00ffff); */
    border-radius: 10px;
}

.frontContainer{
    /* position: relative; */
    width: 100%;
    height: 100%;
    backface-visibility: hidden;
}

.back{
    transform: rotateY(180deg);
    border-radius: 10px;
    display: flex;
    justify-content: center;
    align-items: center;
    background: rgb(240, 248, 250);
}

.characterImg{
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    border-radius: 10px;
    object-fit: cover;
}

.logo{
    margin: auto;
    width: 90%;
    height: auto;

}

.characterName{
    position: absolute;
    bottom: 0;
    left: 0;
    margin: 0px;
    font-size: 1.5em;
    color: rgba(13, 14, 75, 0.938);
    background-color: aliceblue;
    padding: 3px 10px 3px 10px;
    border-radius: 0 10px 0 10px;
    border-style: solid;
    border-width: thin thin 0 0;
    border-color: rgba(13, 14, 75, 0.938);
}

